Fix post video overflow

--- a/src/components/Video.css
+++ b/src/components/Video.css
@@ -3,31 +3,32 @@ http://embedresponsively.com/
 `padding-bottom` is in width percentage
 and that's how the embedded video's aspect ratio is set.
 */
-.rrui__video
-{
-	display  : block;
-	position : relative;
-	overflow : hidden;
+.rrui__video {
+	display: block;
+	position: relative;
+	overflow: hidden;
 }
 
 .rrui__video iframe,
 .rrui__video object,
-.rrui__video embed
-{
-	position : absolute;
-	top      : 0;
-	left     : 0;
-	width    : 100%;
-	height   : 100%;
+.rrui__video embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
-.rrui__video--aspect-ratio
-{
-	height : 0;
+.rrui__video--aspect-ratio {
+	height: 0;
 }
 
-.rrui__video .rrui__picture
-{
+.rrui__video__button {
+	display: block;
+	width: 100%;
+}
+
+.rrui__video .rrui__picture {
 	position: absolute;
 	top: 0;
 	width: 100%;
